# server-status

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  config.toml
.github/workflows/: docker.yml  release.yml  udeps.yml
client/: Cargo.toml  build.rs
client/src/: grpc.rs  main.rs  status.rs
common/: Cargo.toml  build.rs
common/proto/: server_status.proto
server/: Cargo.toml  build.rs
server/src/: config.rs  grpc.rs  main.rs  payload.rs  stats.rs
web/: index.html
