[package]
edition = "2021"
name = "stat_common"
version = "1.1.0"

authors = ["airene <linfanne@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["devops", "monitoring", "dashboard"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/airene/server-status"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1", features = ["serde"]}
prost = "0.10"
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
tokio = {version = "1", features = ["full"]}
tonic = {version = "0.7", features = ["tokio-rustls"]}

[build-dependencies]
tonic-build = "0.7"
